# NoCodeGodot

./: .gitattributes  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  CROWDFUNDING.md  ERROR:  Forge.sln  NoCodeGodot.sln  NoCodeRunner.command  README.md  RELEASE.md  RELEASE_NOTES_ALPHA.md  RELEASE_NOTES_PRE.md  THEME.md  TODO.md  build_manifest.sh  lits.txt  out.txt  run.local.sh.example  run.sh  runLegacy.sh  run_app.sh  run_runner.sh  test.fpose  test.glb  test2.glb
.github/workflows/: deploy-pages.yml  generate-manifest.yml
CWUP/: ARCHITECTURE.md  BACKLOG.md  CONTINUOUS_PUBLISHING.md  RISKS.md  SML_DSL_Reference.md  SMS_DSL_Reference.md  VISION.MD
CWUP/archives_tasks/: 3d_integration.md  action_binding.md  bugs.md  caching.md  camera_interaction.md  code_generator.md  docking.md  docking_floating_windows.md  docking_layout_persistence.md  docking_menu_commands.md  docking_tabs_reordering.md  documentation.md  floats_in_sml.md  forgerunner_cpp_native_runtime.md  i18n_setlocale_freeze.md  id.md  issues_menu.md  layout.md  mainmenu.md  markdown.md  native_3d_tools_port.md  os_lib.md  padding.md  resources_and_localization.md  sml_theme_system.md  sms_integration.md  source_of_truth_self_hosted_git_mirror.md  syntax_highlighting_extensions.md  ui_elements.md
CWUP/risks/: grok_unlimited.md
CWUP/tasks/: ai_stylized_export_dialog.md  animation_control_ui.md  animation_panel.md  attached_properties.md  bgcolor_docking.md  bugs.md  code_edit.md  code_generator.md  docking_dragdrop_ux.md  docking_features.md  docking_foundation.md  dockingmenu.md  dual_layout_properties.md  features_missing.md  forgerunner_cpp_native_runtime.md  initial.md  issues.md  layout.md  markdown_layout.md  missing_features.md  ms_when_return.md  native_3d_camera_and_pick_parity.md  native_3d_tools_port.md  native_3d_transform_and_gizmo_parity.md  native_animation_serializer_exporter.md  (+42 more)
ForgeAiLib/: ForgeAiClient.cs  ForgeAiLib.csproj  README.md
ForgeAiLib.Tests/: UnitTest1.cs
ForgeCli/: ForgeCli.csproj  Program.cs  README.md
ForgeCli.Native/: CMakeLists.txt  README.md
ForgeCli.Native/src/: main.cpp  sandbox_policy.cpp  sandbox_policy.h
ForgeCli.Native/tests/: sandbox_policy_tests.cpp
ForgePoser/: README.md  app.sml  main.sml  main.sms  manifest.sml  strings.sml
ForgeRunner/: Anonymous.ttf.import  ForgeRunner.command  ForgeRunner.csproj  ForgeRunner.sln  Main.cs  Main.cs.uid  README.md  export_presets.cfg  icon.png.import  logo.jpg.import  logo.png.import  logo.svg.import  logo_old.png.import  manifest.example.sml  project.godot  splash.jpg.import  splash.png.import  test.tscn  theme.sml  theme.tres
ForgeRunner.Native/: CMakeLists.txt  README.md
ForgeRunner.Native/host/: forge_runner_native.gdextension  libforge_runner_native.dylib  main.gd  main.tscn  project.godot
ForgeRunner.Native/src/: forge_asset_cache.cpp  forge_asset_cache.h  forge_json_string.cpp  forge_json_string.h  forge_markdown.cpp  forge_markdown.h  forge_path_resolver.h  forge_runner_extension.cpp  forge_runner_main.cpp  forge_runner_main.h  forge_sms_bridge.cpp  forge_sms_bridge.h  forge_sms_error_policy.cpp  forge_sms_error_policy.h  forge_ui_builder.cpp  forge_ui_builder.h  main.cpp
ForgeRunner.Native/tests/: sms_error_policy_tests.cpp  sms_runner_integration_tests.cpp  sms_text_codec_tests.cpp
ForgeRunner.Tests/: ForgeRunner.Tests.csproj  NodeFactoryRegistryTests.cs  UnitTest1.cs
GrokCli/: grok_chat.py  main.py
LICENSES/: LicenseRef-CrowdWare-Commercial.txt
NoCodeDesigner/: Ch39_nonPBR.fbx  Ch39_nonPBR.fbx.import  Ch39_nonPBR_0.png.import  Ch39_nonPBR_1.png.import  Ch39_nonPBR_2.png.import  Ch39_nonPBR_3.png.import  Idle.fbx  Idle.fbx.import  Idle_0.png.import  Idle_1.png.import  Idle_2.png.import  Main.cs  Main.cs.uid  NoCodeDesigner.csproj  NoCodeDesigner.sln  NoCodeRunner.sln  README.md  UI.sml  export_presets.cfg  main.tscn  project.godot  test.tscn
NoCodeRunner/: Main.cs  NoCodeRunner.csproj  README.md  TestResize.tscn  export_presets.cfg  icon.svg.import  main.tscn  manifest.example.sml  project.godot  test_resize.gd  test_resize.gd.uid  theme.tres
PoserDemoProjects/: demo.scene  prompt.sml  scene2.scene  scene3.scene
SMLCore.Native/: CMakeLists.txt  README.md
SMLCore.Native.Test/: MarkdownParserTests.cs  SmlParserTests.cs  SmlUriResolverTests.cs
SMLCore.Native/include/: sml_document.h  smlcore_native.h
SMLCore.Native/src/: smlcore_native.cpp
SMLCore.Native/tests/: parser_tests.cpp  spec_tests.cpp
SMLCore.Tests/: SMLCore.Tests.csproj  SmlParserTests.cs  SmlUriResolverTests.cs
SMSCore/: SMSCore.csproj
SMSCore.Native/: CMakeLists.txt  README.md
SMSCore.Native.Test/: ProjectFsTests.cs  SmsEventsTests.cs  SmsParserNumbersTests.cs
SMSCore.Native/include/: sms_native.h
SMSCore.Native/src/: sms_native.cpp
SMSCore.Native/tests/: parser_events_tests.cpp  spec_2026_tests.cpp  ui_string_bridge_tests.cpp
SMSCore.Tests/: SMSCore.Tests.csproj  SmsEventsTests.cs
book/: animation.sml  cover.sml  forest.sml  grok.sml  login.sml  lotus.sml  timeline.md
docs/: AI_UseCase.md  DEVELOPER_CODEGEN.md  SMS.ebnf  SMS_cookbook_v0.md  asset_pipeline_blender_gltf_runner.md  blender_armature_workaround.md  layout_modes_v1.md  manifest_specification.md  runtime_lifecycle.md  sml_resources.md  sms-reference.sml  sms_ai_authoring_profile_v0.md  sms_docking_mainmenu.md  sms_functions.md  sms_language_profile_v0.md  sms_syntax_demo_v0.md  supported_sml_elements.md
grokImagine/: README.md  grokImagine.sln  run.sh
images/: splash.afdesign
labels/: good_first_issue.md
news/: apps_without_webstack.md  forge_use_case_greybox_to_video.md  performance.md  theday_i_realized_whatis_possible_with_forge.md
samples/: app_layout_demo.sml  docking_demo.sml  docking_demo.sms  document_demo.sml  markdown_demo.sml
scripts/: build_manifest.sh  forgecli_native.sh  generate_manifest.py  set_version.sh  setup_godot.sh
tools/: blender_armature_helper.py  generate_sml_element_docs.gd  generate_sml_resources_docs.gd  generate_sms_functions_docs.gd  generate_theme.gd
(+770 files in other folders)
